--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	
 
 
-	<div class="container">
+	<div class="container container-fluid">
 		<!-- main row -->
 
 		<div class="row">
@@ -70,15 +70,15 @@
    						 <h2 id="h2">Connect with me</h2>
   					</div>
   					<div class="panel-body">
-   					 	<div class="col-md-4">
+   					 	<div class="col-md-4" id="side-logos">
 							<a href="https://github.com/sawaby" target="_blank"><img alt="Maria" class="logo img-rounded" src="assets/images/github.png"></a>
    					 	</div>
-						<div class="col-md-4">
+						<div class="col-md-4" id="side-logos">
    					 		<a href="https://www.linkedin.com/in/maria-sawaby-nazehat/" target="_blank"><img alt="Maria" class="logo img-rounded" src="assets/images/linkedin.png"></a>
 
    					 	</div>
 						
-						<div class="col-md-4">
+						<div class="col-md-4" id="side-logos">
    					 		<a href="http://stackoverflow.com/users/3508207/maria" target="_blank"><img alt="Maria" class="logo img-rounded" src="assets/images/stack.png"></a>
 
    					 	</div>
